# frontier-ready

./: .gitignore  .gitmodules  CODE_REFACTORING_GUIDE.md  DATA_MIGRATION.md  IDEAS.md  INFRASTRUCTURE_INTEGRATION.md  LEARNINGS.md  MIGRATION_CHECKLIST.md  MIGRATION_COMPLETE.md  PLAN.md  README.md  RESTRUCTURE_EXECUTION_PLAN.md  STRUCTURE_COMPARISON.md  pyproject.toml
.claude/skills/add-component/: skill.md
.claude/skills/add-package/: skill.md
.claude/skills/add-tests/: skill.md
.claude/skills/add-variant/: skill.md
.claude/skills/deploy-infra/: skill.md
.claude/skills/new-experiment/: skill.md
.claude/skills/update-docs/: skill.md
experiments/01-baseline/: README.md  config.yaml  pyproject.toml  run.py
experiments/02-rope/: README.md  config.yaml  pyproject.toml  run.py
infra/: .env.example  .gitignore  Pulumi.dev.yaml  Pulumi.example.yaml  Pulumi.yaml  README.md  connect-simple.sh  connect.sh  index.ts  outputs.ts  package.json  tsconfig.json
infra/config/: index.ts  types.ts
infra/resources/: disk.ts  index.ts  instance.ts
infra/scripts/: startup.sh
scripts/: 01-backup-vm-data.sh  02-organize-data.sh
study1-gpt/: .gitignore  ANALYTICS_IMPLEMENTATION.md  EXPERIMENTS.md  README.md  RESTRUCTURE_PROPOSAL.md  pyproject.toml
study1-gpt/analysis/: QUICKSTART.md  README.md  __init__.py  example_usage.py  summarize_run.py  test_workflow.sh  visualize_run.py
study1-gpt/analysis/analysis/test_run/: metrics.jsonl
