[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "study1-gpt"
version = "0.1.0"
description = "Reproduce GPT-2 124M training and test architectural modifications"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy",
    "tiktoken",
    "transformers",
    "datasets",
    "tqdm",
    "requests",
]

[project.optional-dependencies]
dev = ["ruff", "ipython"]
analysis = ["matplotlib", "pandas", "jupyter", "seaborn>=0.12.0"]
tracking = ["wandb"]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["analysis", "writeup", "build-nanogpt"]

# build-nanogpt is a submodule with standalone scripts, not a workspace member
