[project]
name = "experiment-rope"
version = "0.1.0"
description = "RoPE variant GPT-2 124M training experiment"
requires-python = ">=3.11"
dependencies = [
    "llmkit",
    "exptools",
    "pyyaml>=6.0",
]

[tool.uv.sources]
llmkit = { workspace = true }
exptools = { workspace = true }

[project.optional-dependencies]
analysis = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
